--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 
 {
-    "name": "Aluracord - Matrix (peas)",
+    "name": "Aluracord - Cosmic",
     "theme": {
       "colors": {
         "primary": {
-          "050": "#E3F9E5",
-          "100": "#C1EAC5",
-          "200": "#A3D9A5",
-          "300": "#7BC47F",
-          "400": "#57AE5B",
-          "500": "#3F9142",
-          "600": "#2F8132",
-          "700": "#207227",
-          "800": "#0E5814",
-          "900": "#05400A"
+          "050": "#e7e5e0",
+          "100": "#cfcce1",
+          "200": "#aba5ca",
+          "300": "#938bbb",
+          "400": "#7b72ac",
+          "500": "#655b9a",
+          "600": "#544b81",
+          "700": "#433c67",
+          "800": "#3b355a",
+          "900": "#332d4d"
         },
         "neutrals": {
           "000": "#FFFFFF",
