--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "@skynexui/components": "^1.23.6",
+    "@supabase/supabase-js": "^1.29.4",
+    "ajax": "^0.0.4",
+    "axios": "^0.25.0",
     "next": "^12.0.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "supabase": "^0.5.0"
   },
   "scripts": {
     "dev": "next dev",
